# checkers

./: .gitignore  .travis.yml  CHANGELOG.md  Checkers.cabal  ClassCheck.cabal  Makefile  README  README.md  changes.tw  checkers.cabal  stack.yaml  todo.txt  wikipage.tw
.github/workflows/: haskell-ci.yml
src/Control/Monad/: Extensions.hs
src/Test/: QCHelp.hs
src/Test/Checkers/: Classes.hs
src/Test/ClassCheck/: Classes.hs
src/Test/QuickCheck/: Applicative.hs  Bottoms.hs  Checkers.hs  Classes.hs  Help.hs  Instances.hs  Later.hs  Utils.hs
src/Test/QuickCheck/Instances/: Array.hs  Char.hs  Eq.hs  Int.hs  List.hs  Maybe.hs  NonEmpty.hs  Num.hs  Ord.hs  Tuple.hs  Word.hs
