Name:                checkers
Version:             0.4.5
Cabal-Version:       >= 1.6
Synopsis:            Check properties on standard classes and data structures.
Category:            Testing
Description:
  ''Checkers'' wraps up the expected properties associated with various
  standard type classes as QuickCheck properties.  Also some morphism
  properties.  It also provides arbitrary instances and generator combinators
  for common data types.
  .
  &#169; 2008-2013 by Conal Elliott; BSD3 license.
  .
  Contributions from: Thomas Davie.
Author:              Conal Elliott
Maintainer:          conal@conal.net
Copyright:           (c) 2008-2013 by Conal Elliott
License:             BSD3
License-File:        COPYING
Stability:           experimental
build-type:          Simple

source-repository head
  type:     git
  location: git://github.com/conal/checkers.git

Library
  hs-Source-Dirs:      src
  Extensions:
  Build-Depends:       base < 5, random, QuickCheck>=2.3, array >= 0.1
  Exposed-Modules:
                       Test.QuickCheck.Utils
                       Test.QuickCheck.Checkers
                       Test.QuickCheck.Classes
                       Test.QuickCheck.Bottoms
                       Test.QuickCheck.Instances
                       Test.QuickCheck.Instances.Array
                       Test.QuickCheck.Instances.Char
                       Test.QuickCheck.Instances.Eq
                       Test.QuickCheck.Instances.List
                       Test.QuickCheck.Instances.Maybe
                       Test.QuickCheck.Instances.Num
                       Test.QuickCheck.Instances.Ord
                       Test.QuickCheck.Instances.Tuple
                       Test.QuickCheck.Later
  Other-modules:
                       Control.Monad.Extensions
  ghc-options:         -Wall
