Name:                checkers
Version:             0.5.1
Cabal-Version:       >= 1.6
Synopsis:            Check properties on standard classes and data structures.
Category:            Testing
Description:
  ''Checkers'' wraps up the expected properties associated with various
  standard type classes as QuickCheck properties.  Also some morphism
  properties.  It also provides arbitrary instances and generator combinators
  for common data types.
  .
  &#169; 2008-2013 by Conal Elliott; BSD3 license.
Author:              Conal Elliott
Maintainer:          conal@conal.net
Copyright:           (c) 2008-2013 by Conal Elliott
License:             BSD3
License-File:        COPYING
Stability:           experimental
build-type:          Simple
tested-with:         GHC==8.6.4, GHC==8.4.4, GHC==8.2.2, GHC==8.0.2, GHC==7.10.3
homepage:            https://github.com/conal/checkers
source-repository head
  type:     git
  location: git://github.com/conal/checkers.git

Library
  hs-Source-Dirs:      src
  Extensions:
  Build-Depends:       base >= 4.8 && < 5, random, QuickCheck>=2.3, array >= 0.1, semigroupoids >= 5 && < 6
  if !impl(ghc >= 8.0)
    build-depends:
      semigroups          >= 0.18.2  && < 0.19

  Exposed-Modules:
                       Test.QuickCheck.Utils
                       Test.QuickCheck.Checkers
                       Test.QuickCheck.Classes
                       Test.QuickCheck.Bottoms
                       Test.QuickCheck.Instances
                       Test.QuickCheck.Instances.Array
                       Test.QuickCheck.Instances.Char
                       Test.QuickCheck.Instances.Eq
                       Test.QuickCheck.Instances.List
                       Test.QuickCheck.Instances.Maybe
                       Test.QuickCheck.Instances.Num
                       Test.QuickCheck.Instances.Ord
                       Test.QuickCheck.Instances.Tuple
                       Test.QuickCheck.Later
  Other-modules:
                       Control.Monad.Extensions
  ghc-options:         -Wall
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
